[gd_scene load_steps=2 format=3 uid="uid://h1tpifchokj3"]

[ext_resource type="Script" uid="uid://c0m8istsju6rf" path="res://scene/arena_map/enemy_spawner_controller/enemy_spawner_controller.gd" id="1_2ic72"]

[node name="EnemySpawnerController" type="Node"]
script = ExtResource("1_2ic72")

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="MobsFrequencyTimer" type="Timer" parent="." groups=["MobFrequencyTimer"]]
unique_name_in_owner = true
wait_time = 0.1
autostart = true
ignore_time_scale = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="MobsFrequencyTimer" to="." method="_on_mobs_frequency_timer_timeout"]
